fix matt blanket not covering the notch area when opened in iphone

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -35,11 +35,3 @@ header h1{
   padding: 10px 0 0 0;
   margin: 10px 0;
 }
-
-.full-page-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-}
