--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,18 @@
 /* Main game area */
 #matt-blanket {
   width: 100vw;
-  height: max(920px, 100vh);
+  height: max(880px, 100%);
   position: absolute;
   top: 0;
   align-items: center;
   justify-content: center;
   opacity: 0.8;
-  z-index: 4;
   background-color: white;
+  z-index: 1;  
+}
+
+#number-display-container  {
+  height: 430px;
 }
 
 #number-display-container-1  {
@@ -24,7 +28,7 @@
 }
 
 #number-display-container-1,#number-display-container-2, #buttons, #img-numbers, #play-button-container, footer {
-  width: 450px;
+  width: 450px;  
 }
 
 #number-display-container-1,#number-display-container-2  {
@@ -45,48 +49,21 @@
   font-size: 25px;
 }
 
-@media only screen and (min-width: 481px) and (max-width: 768px) {
-
-  header h1 {
-    font-size: 35px;
-  }
-
-  .full-page-container {
-    transform: scale(0.8);
-    position: absolute;
-    top: -15px;
-  }
-
-  #window-submit-max-score,#countdown-container,#sum-display-container, #scores-display-container,#end-game, #number-display-container {
-    top: 100px;
-  }
-
-  #matt-blanket {
-    width: 125vw;
-    height: 125vh;
-    top: -80px;
-  }
-}
-
 @media only screen and (max-width: 480px) {
 
   header h1 {
     font-size: 30px;
+  }   
+
+  .white-windows, #game-screen-container {
+    transform: scale(0.65);
   }
 
-  .full-page-container {
-    transform: scale(0.64);
-    position: relative;
-    top: -145px;
+  #game-screen-container {
+    top: -85px;
   }
 
-  #window-submit-max-score,#countdown-container,#sum-display-container, #scores-display-container,#end-game, #number-display-container {
-    top: 100px;
-  }
-
-  #matt-blanket {
-    width: 180vw;
-    height: 180vh;
-    top: -100px;
+  .white-windows {
+    top: -10px;
   }
 }
