--- a/assets/css/windows.css
+++ b/assets/css/windows.css
@@ -1,10 +1,21 @@
-/* General rule */
+/* General rules */
+.white-windows {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 80px;
+  height: 420px;
+  width: 100%;
+  z-index: 1;
+}
+
 #window-submit-max-score, #countdown-container, #sum-display-container, #scores-display-container, #end-game {
   display: flex;
   width: 400px;
   height: 240px;
   position: absolute;
-  top: 170px;
+  top: 85px;
   flex-direction: column;
   align-items: center;
   background-color: white;
@@ -25,7 +36,7 @@
 }
 
 #window-submit-max-score {
-  z-index: 5;
+  z-index: 1;
 }
 
 #max-score {
@@ -43,30 +54,27 @@
   flex-direction: column;
   width: 100%;
   align-content: flex-start;
+  position: absolute;
 }
 
 /* Window showing sum, odds or even, who wins */
 #sum-display-container {
-  z-index: 1;
   opacity: 0;
 }
 
 /* Window showing scores */
 #scores-display-container {
-  z-index: 2;
   opacity: 0;
 }
 
 /* end game window */
 #end-game {
-  z-index: 4;
   opacity: 0;
 }
 
 /* countdown window */
 #countdown-container {
   opacity: 0;
-  z-index: 3;
 }
 
 #countdown-container h2{
